Update minimal metadata and citation for 2025-07-17

--- a/citation.bib
+++ b/citation.bib
@@ -1,8 +1,9 @@
-@misc{nix,
+@software{nix,
   author       = {Porter, Matthew A.},
-  title        = {Qompass AI on Nix},
+  title        = {nix},
   year         = {2025},
-  note         = {Version 2025-05-01. Not yet indexed by Zenodo.},
-  howpublished = {\url{https://github.com/qompassai/nix}},
-  organization = {Qompass AI}
+  license      = {Q-CDA-1.0},
+  publisher    = {Zenodo},
+  version      = {c2e2ed7},
+  url          = {https://github.com/qompassai/nix}
 }
